<resources>
    <string name="app_name">DateSpoof</string>
    <string name="xposed_description">ä¼ªè£ææºæ¥æä¿¡æ¯ï¼ç®æ åºç¨ï¼com.zyyad.game</string>

    <string-array name="xposed_scope">
        <item>com.zyyad.game</item>
    </string-array>

    <!-- Settings -->
    <string name="pref_category_general">ä¼ªè£è®¾ç½®</string>
    <string name="pref_enabled_title">å¯ç¨æ¥æä¼ªè£</string>
    <string name="pref_enabled_summary_on">æ¥æä¼ªè£å·²å¼å¯</string>
    <string name="pref_enabled_summary_off">æ¥æä¼ªè£å·²å³é­</string>
    <string name="pref_year_title">ä¼ªè£å¹´ä»½</string>
    <string name="pref_month_title">ä¼ªè£æä»½</string>
    <string name="pref_day_title">ä¼ªè£æ¥æ</string>
</resources>
